<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:background="@drawable/ic_background_app"
    tools:context="com.example.calendarioestrenos.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTitle"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cv_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/ic_Description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_background" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/tvTitle"
                android:textAllCaps="true"
                android:textColor="@color/title_color" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDialog"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="26dp"
        app:cardBackgroundColor="@color/title_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/ic_background_datedialog"
            >
            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDialog"
                android:textColor="@color/tv_backgroundDialog"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="20sp"
                android:layout_marginTop="32dp"/>

            <Button
                android:id="@+id/buttonDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDialog"
                android:layout_marginTop="16dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/btnNext"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:cardCornerRadius="300dp"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toBottomOf="@id/cvDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/ic_cv_btn_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNext"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/tv_backgroundDialog2"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>